# Server_DaangnMarket

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy.py  pyproject.toml  requirements.txt
.config/: daangn-market.nginx  daangnMarket.nginx  gunicorn.py  supervisord.conf
app/chat/: admin.py  models.py  serializers.py  urls.py  views.py
app/chat/migrations/: 0001_initial.py  0002_message_content.py
app/config/: c.py  docs_views.py  settings.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  production.py
app/core/: managers.py  models.py  my_auth.py  swagger_custom.py  utils.py
app/location/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/location/migrations/: 0001_initial.py  0002_auto_20200413_2144.py  0002_auto_20200414_2137.py
app/members/: admin.py  models.py  serializers.py  swaggers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200401_1719.py  0002_auto_20200414_2137.py  0003_auto_20200402_0040.py  0003_auto_20200418_1922.py  0004_auto_20200402_2140.py  0004_auto_20200419_0122.py  0005_auto_20200404_1635.py  0005_selectedlocation_activated.py  0006_auto_20200407_1943.py  0006_auto_20200409_1444.py  0006_auto_20200419_0132.py  0007_auto_20200419_2339.py  (+5 more)
app/notification/: admin.py  models.py  serializers.py  urls.py  views.py
app/post/: admin.py  filters.py  models.py  serializers.py  swaggers.py  urls.py  views.py
app/templates/: base.html
config/: settings.py
db.daangn/: postgresql.conf
db.daangn/global/: 1260  1260_vm  1262  2676  pg_control
(+67 files in other folders)
